--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Ritual Heurístico</title>
+  <title>Triggui – Ritual Supremo</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       width: 100%;
-      height: 100%;
+      min-height: 101vh; /* 🔁 Scroll imperceptible para swipe refresh */
       font-family: 'Archivo', sans-serif;
       background: white;
-      overflow: auto; /* <- Swipe refresh natural habilitado */
       -webkit-overflow-scrolling: touch;
+      overflow-y: auto;
     }
     body.dark { background: #000; }
 
@@ -146,6 +146,21 @@
       opacity: 0.8;
     }
 
+    #reiniciarBtn {
+      background: none;
+      border: none;
+      font-size: 1.8rem;
+      margin-top: 8px;
+      cursor: pointer;
+      color: white;
+      opacity: 0.5;
+      transition: opacity 0.3s ease;
+    }
+
+    #reiniciarBtn:hover {
+      opacity: 1;
+    }
+
     .pulse {
       animation: pulse 2.5s infinite;
     }
@@ -174,7 +189,7 @@
 <body>
   <div class="main">
     <div class="grid" id="gridContainer">
-      <!-- Bloques se crean dinámicamente -->
+      <!-- Los bloques se generan dinámicamente -->
     </div>
 
     <div class="footer">
@@ -183,6 +198,7 @@
         El libro no te eligió. Tú ya estabas listo para encontrarlo.<br><br>
         Ahora… busca un libro que tengas cerca. Ábrelo en cualquier página y lee una sola frase con absoluta presencia.
       </div>
+      <button id="reiniciarBtn" class="hidden">🔄</button>
       <img src="/trigguiletras.png" class="trigguiletras" />
     </div>
   </div>
@@ -244,9 +260,8 @@ function iniciarJuego() {
 }
 
 function manejarClick(nombre) {
-  if (revelado) {
-    location.reload(); // Swipe y botón resetean juego
-  } else if (nombre === bloquePortada) {
+  if (revelado) return;
+  if (nombre === bloquePortada) {
     revelarTodo();
   } else {
     revelarSolo(nombre);
@@ -285,6 +300,11 @@ function revelarTodo() {
 el("shockBtn").onclick = () => {
   el("shockBtn").classList.add("hidden");
   el("mensajeFinal").classList.remove("hidden");
+  el("reiniciarBtn").classList.remove("hidden");
+};
+
+el("reiniciarBtn").onclick = () => {
+  location.reload();
 };
 
 iniciarJuego();
