--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Ritual Supremo</title>
+  <title>Triggui – Ritual Final</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       width: 100%;
-      min-height: 101vh; /* 🔁 Scroll imperceptible para swipe refresh */
+      min-height: 101vh;
       font-family: 'Archivo', sans-serif;
       background: white;
       -webkit-overflow-scrolling: touch;
@@ -115,7 +115,7 @@
     }
 
     .shock {
-      background: linear-gradient(135deg, #ff7e5f, #feb47b);
+      background: linear-gradient(135deg, #ff6a00, #ffc400);
       color: white;
       font-weight: bold;
       border: none;
@@ -123,7 +123,7 @@
       padding: 12px 24px;
       font-size: 1rem;
       cursor: pointer;
-      box-shadow: 0 4px 16px rgba(255, 150, 100, 0.4);
+      box-shadow: 0 4px 16px rgba(255, 150, 0, 0.4);
       animation: fadeIn 1.2s ease forwards;
     }
 
@@ -188,9 +188,7 @@
 </head>
 <body>
   <div class="main">
-    <div class="grid" id="gridContainer">
-      <!-- Los bloques se generan dinámicamente -->
-    </div>
+    <div class="grid" id="gridContainer"></div>
 
     <div class="footer">
       <button class="shock hidden" id="shockBtn">📚👊 Chócalas por leer un libro físico</button>
@@ -206,27 +204,27 @@
 <script>
 const bloques = ["detente", "lee", "pregunta", "conecta"];
 const colores = [
-  "linear-gradient(135deg, #ff7e5f, #feb47b)",
-  "linear-gradient(135deg, #6a11cb, #2575fc)",
-  "linear-gradient(135deg, #00c6ff, #0072ff)",
-  "linear-gradient(135deg, #f7797d, #FBD786)"
+  "linear-gradient(135deg, #ff4e50, #f9d423)", // rojo a dorado
+  "linear-gradient(135deg, #43cea2, #185a9d)", // verde a azul oscuro
+  "linear-gradient(135deg, #ff6e7f, #bfe9ff)", // rosa a azul claro
+  "linear-gradient(135deg, #f7971e, #ffd200)"  // naranja vibrante
 ];
 
 const libros = [
   {
-    portada: 'https://m.media-amazon.com/images/I/91bYsX41DVL.jpg',
+    portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1678027798i/123116666.jpg',
     frases: ["🔁 Mejora 1% diario", "🧱 Crea sistemas, no metas", "🧠 Identidad guía el hábito"]
   },
   {
-    portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L.jpg',
+    portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1606707026i/53138083.jpg',
     frases: ["⏳ Solo el ahora existe", "🌟 Observa, no reacciones", "🧘 Encuentra tu ser"]
   },
   {
-    portada: 'https://m.media-amazon.com/images/I/81aY1lxkJ5L.jpg',
+    portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg',
     frases: ["🌿 Honra tus palabras", "🌀 No tomes nada personal", "🦅 Sé impecable contigo"]
   },
   {
-    portada: 'https://m.media-amazon.com/images/I/71XkT7vX3DL.jpg',
+    portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1604385988i/55729446.jpg',
     frases: ["🔓 Deja ir el control", "🌊 Fluye con la vida", "🌱 Libera la resistencia"]
   }
 ];
@@ -239,7 +237,6 @@ const el = id => document.getElementById(id);
 function iniciarJuego() {
   const grid = el('gridContainer');
   grid.innerHTML = '';
-
   libroActual = libros[Math.floor(Math.random() * libros.length)];
   bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
   revelado = false;
@@ -260,8 +257,9 @@ function iniciarJuego() {
 }
 
 function manejarClick(nombre) {
-  if (revelado) return;
-  if (nombre === bloquePortada) {
+  if (revelado) {
+    location.reload(); // Reinicia si ya se reveló todo
+  } else if (nombre === bloquePortada) {
     revelarTodo();
   } else {
     revelarSolo(nombre);
@@ -282,11 +280,10 @@ function revelarSolo(bloque) {
 
 function revelarTodo() {
   bloques.forEach((bloque, i) => {
-    if (bloque === bloquePortada) {
-      el(bloque + "Text").innerHTML = `<img src="${libroActual.portada}" style="width:90%;border-radius:12px;">`;
-    } else {
-      el(bloque + "Text").textContent = libroActual.frases[i % 3];
-    }
+    const content = bloque === bloquePortada
+      ? `<img src="${libroActual.portada}" style="width:90%;border-radius:12px;">`
+      : libroActual.frases[i % 3];
+    el(bloque + "Text").innerHTML = content;
     el(bloque + "Text").classList.remove("hidden");
     el(bloque).querySelector(".label").classList.add("hidden");
     el(bloque).classList.remove("pulse");
@@ -303,9 +300,7 @@ el("shockBtn").onclick = () => {
   el("reiniciarBtn").classList.remove("hidden");
 };
 
-el("reiniciarBtn").onclick = () => {
-  location.reload();
-};
+el("reiniciarBtn").onclick = () => location.reload();
 
 iniciarJuego();
 </script>
